--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. 
@@ -60,7 +60,7 @@
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, 
                 bringing customers directly to your website.
@@ -68,7 +68,7 @@
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the 
                 search ranking and visibility for your business.
@@ -76,7 +76,7 @@
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising 
                 costs decrease, and you no longer need to advertise your page.
