--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="hero"></div>
     <div class="content">
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -35,8 +35,8 @@
                 Search Engine Optimization (SEO) allows you to increase your visibility 
                 and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </section>
+        <section id="online-reputation-management" class="online-reputation-management">
             <img src="./images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -45,8 +45,8 @@
                 your business. Online Reputation Management gives you the control over what 
                 potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </section>
+        <section id="social-media-marketing" class="social-media-marketing">
             <img src="./images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -55,40 +55,40 @@
                 your brand, using analytics to find the right markets and increase your 
                 lead generation.
             </p>
-        </div>
+        </section>
     </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+    <aside class="benefits">
+        <aside class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, 
                 bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </aside>
+        <aside class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the 
                 search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </aside>
+        <aside class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising 
                 costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
-    <div class="footer">
+        </aside>
+    </aside>
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
